<resources>
    <string name="dismiss">Dismiss</string>
   	<string name="delete">Delete</string>
    <string name="call">Call</string>
    <string name="reply">Reply</string>
    <string name="view">View</string>
    <string name="dismiss_all">Dismiss All</string>
    <string name="dismiss_all_dialog_text">This will dismiss all notifications.</string>
    <string name="dismiss_all_loading_text">Dismissing notifications&#8230;</string>
    <string name="dismiss_all_same_user">Dismiss All (Same User)</string>
    <string name="dismiss_all_same_user_dialog_text">This will dismiss all notifications from this user.</string>
    <string name="dismiss_all_same_app">Dismiss All (Same App)</string>
    <string name="dismiss_all_same_app_dialog_text">This will dismiss all notifications from this application.</string>
	<string name="display_all_dismiss_options">Display All Dismiss Options</string>
	<string name="launch_options_menu">Launch Options Menu</string>
    <string name="share">Share</string>
    <string name="share_title">Someone you know wants you to try the Android app Droid Notify!</string>
    <string name="dismiss_notification_text">Dismiss Notification</string>
    <string name="popup_vertical_location_title">Popup Vertical Location</string>
    <string name="popup_vertical_location_summary">Select vertical location of the window.</string>
    <string name="auto_popup_width">Auto Popup Width</string>
    <string name="auto_popup_width_summary">Automatically set the popup window width. This is based on the screen size. Window padding is only set on higher resolution screens.</string>
    <string name="portrait_popup_width">Portrait Popup Width</string>
    <string name="portrait_popup_width_summary">The popup window width when in portrait mode.</string>
    <string name="landscape_popup_width">Landscape Popup Width</string>
    <string name="landscape_popup_width_summary">The popup window width when in landscape mode.</string>
    <string name="enter_width_in_pixels">Enter Width In Pixels</string>
    <string name="settings">Settings</string>
    <string name="basic_category">BASIC</string>
   	<string name="insert_signature">Insert Signature</string>
   	<string name="insert_signature_summary">Insert a signature at the end of the message when sent via quick reply.</string>
   	<string name="signature">Signature</string>
   	<string name="quick_reply_default_signature">-Sent via Droid Notify for Android</string>
   	<string name="hide_header_panel">Hide Header Panel</string>
   	<string name="hide_header_panel_summary">Hide the notification header panel when the keyboard is on the screen.</string>
   	<string name="hide_contact_panel">Hide Contact Panel</string>
   	<string name="hide_contact_panel_summary">Hide the notification contact panel when the keyboard is on the screen.</string>
   	<string name="hide_button_panel">Hide Button Panel</string>
   	<string name="hide_button_panel_summary">Hide the notification button panel when the keyboard is on the screen.</string>
   	<string name="delivery_reports_category">DELIVERY REPORTS</string>
   	<string name="message_sent_notification">Message Sent Notification</string>
   	<string name="message_sent_notification_summary">Show a notification in the status bar when messages are sent.</string>
    <string name="message_delivered_notification">Message Delivered Notification</string>
   	<string name="message_delivered_notification_summary">Show a notification in the status bar when messages are delivered.</string>
   	<string name="message_failed_notification">Message Failed Notification</string>
   	<string name="message_failed_notification_summary">Show a notification in the status bar when sending a message fails.</string>
   	<string name="buttons_category">BUTTONS</string>
    <string name="button_font_size_title">Button Font Size</string>
    <string name="button_font_size_summary">Select the font size of the button text.</string>
    <string name="bold_button_text_title">Bold Button Text</string>
    <string name="bold_button_text_summary">Set the button text to bold.</string>
    <string name="notification_header_category">NOTIFICATION HEADER</string>
    <string name="contact_photo_category">CONTACT PHOTO</string>
    <string name="contact_name_category">CONTACT NUMBER</string>
    <string name="contact_number_category">CONTACT NAME</string>
    <string name="notification_body_category">NOTIFICATION BODY</string>
    <string name="notification_preview">Notification Preview</string>
    <string name="notification_preview_summary">Display a preview of the notifications.</string>
    <string name="theme">Theme</string>
    <string name="theme_category">THEME</string>
   	<string name="theme_summary">Select the theme for the notifications.</string>
    <string name="preference_notification_type_info_icon_enabled_title">Display Type Icon</string>
   	<string name="preference_notification_type_info_icon_enabled_summary">The notification type icon is the icon to the right of the contact photo.</string>
    <string name="display_notification_type_info">Display Notification Type Info</string>
   	<string name="display_notification_type_info_summary">The notification type info is the text information under the notification count.</string>
   	<string name="preference_notification_type_info_size">Type Font Size</string>
   	<string name="preference_notification_type_info_size_summary">Select the font size of the notification type information text.</string>
    <string name="center_align_notification_type_info">Center Align Notification Type Info</string>
   	<string name="center_align_notification_type_info_summary">Center align the notification type info in the notification header.</string>
    <string name="bold_notification_type_info">Bold Notification Type Info</string>
   	<string name="bold_notification_type_info_summary">Bold the notification type info in the notification header.</string>
   	<string name="preference_display_contact_photo_title">Display Contact Photo</string>
   	<string name="preference_display_contact_photo_summary">Show a contact photo for certain notifications.</string>
   	<string name="preference_display_contact_name_title">Display Contact Name</string>
   	<string name="preference_display_contact_name_summary">Display the contact name in the notification header.</string>
    <string name="center_align_contact_name">Center Align Contact Name</string>
   	<string name="center_align_contact_name_summary">Center align the contact name in the notification header.</string>
    <string name="bold_contact_name">Bold Contact Name</string>
   	<string name="bold_contact_name_summary">Bold the contact name text.</string>
   	<string name="preference_hide_unknown_contact_name_title">Hide Unknown Contact Name</string>
   	<string name="preference_hide_unknown_contact_name_summary">Hide the contact name if it is unknown.</string>
   	<string name="preference_contact_name_font_size_title">Contact Name Font Size</string>
   	<string name="preference_contact_name_font_size_summary">Select the font size of the contact name text.</string>
   	<string name="preference_display_contact_number_title">Display Contact Number</string>
   	<string name="preference_display_contact_number_summary">Display the contact number in the notification header.</string>
    <string name="center_align_contact_number">Center Align Contact Number</string>
   	<string name="center_align_contact_number_summary">Center align the contact number in the notification header.</string>
    <string name="bold_contact_number">Bold Contact Number</string>
   	<string name="bold_contact_number_summary">Bold the contact number text.</string>
   	<string name="preference_contact_number_font_size_title">Contact Number Font Size</string>
   	<string name="preference_contact_number_font_size_summary">Select the font size of the contact number text.</string>
   	<string name="preference_display_unknown_contact_number_title">Display Unknown Contact Number</string>
   	<string name="preference_display_unknown_contact_number_summary">Display the contact number if the contact is unknown.</string>
    <string name="preference_contact_placeholder_image">Contact Placeholder Image</string>
    <string name="preference_contact_placeholder_image_summary">Select the placeholder image you would like to display for unknown contacts.</string>
    <string name="preference_contact_photo_background">Contact Photo Background</string>
    <string name="preference_contact_photo_background_summary">Select the background image you would like to display behind the contact photo.</string>
	<string name="preference_contact_photo_size">Contact Photo Size</string>
    <string name="preference_contact_photo_size_summary">Select the contact photo size.</string>
    <string name="preference_center_align_body_text_title">Center Align Body Text</string>
   	<string name="preference_center_align_body_text_summary">Center align the text of the notification body text.</string>
   	<string name="preference_notification_body_font_size_title">Notification Body Font Size</string>
   	<string name="preference_notification_body_font_size_summary">Select the font size you want to use when when displaying the notification body.</string>
	<string name="preference_display_notification_body_title">Display Notification Body</string>
    <string name="preference_display_notification_body_summary">Display the notification body in the popup.</string>
   	<string name="preference_notification_body_max_lines_title">Notification Body Max Lines</string>
   	<string name="preference_notification_body_max_lines_summary">Select the maximum lines that will display in the notification body.</string>
   	<string name="bold_notification_body">Bold Notification Body</string>
   	<string name="bold_notification_body_summary">Bold the notification body text.</string>
   	<string name="disable_notification_body_links">Disable Notification Body Links</string>
   	<string name="disable_notification_body_links_summary">Disable the auto-links in the notification body text.</string>
   	<string name="view_thread_text">View Thread</string>
   	<string name="messaging_inbox_text">Messaging Inbox</string>
   	<string name="call_contact_text">Call Contact</string>
   	<string name="view_call_log_text">View Call Log</string>
   	<string name="add_calendar_event_text">Add Calendar Event</string>
   	<string name="edit_calendar_event_text">Edit Calendar Event</string>
    <string name="view_calendar_text">View Calendar</string>
   	<string name="view_contact_text">View Contact</string>
   	<string name="add_contact_text">Add Contact</string>
   	<string name="text_contact_text">Text Contact</string>
   	<string name="edit_contact_text">Edit Contact</string>
   	<string name="long_press_dismiss_button_action">Long Press Dismiss Button Action</string>
   	<string name="long_press_dismiss_button_action_summary">Define what happens when you long press the dismiss button.</string>
    <string name="preference_button_style_title">Button Style</string>
   	<string name="preference_button_style_summary">Choose the notification button style.</string>
    <string name="preference_hide_single_message_header_enabled_title">Hide Single Message Header</string>
   	<string name="preference_hide_single_message_header_enabled_summaryOn">The notifications will not display the header text (e.g. 1/1) when a single message is displayed.</string>
   	<string name="preference_hide_single_message_header_enabled_summaryOff">The notifications will display the header text (e.g. 1/1) when a single message is displayed.</string>
	<string name="enable_emoticons">Enable Emoticons</string>
	<string name="enable_emoticons_summary">Display emoticons in the message body of notifications.</string>
</resources>