<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">    
	<item 
		android:id="@+id/dismiss_all"
        android:icon="@drawable/ic_menu_dismiss_all"
        android:title="@string/dismiss_all" />     
	<item 
		android:id="@+id/dismiss_all_same_user"
        android:icon="@drawable/ic_menu_dismiss_all"
        android:title="@string/dismiss_all_same_user" />     
	<item 
		android:id="@+id/dismiss_all_same_app"
        android:icon="@drawable/ic_menu_dismiss_all"
        android:title="@string/dismiss_all_same_app" />    
	<item 
		android:id="@+id/share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/share" />
    <item 
		android:id="@+id/settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/settings" />
</menu>